--- a/sass/_nav.scss
+++ b/sass/_nav.scss
@@ -9,6 +9,9 @@ nav {
   z-index: 3;
   background-color: var(--bg1);
 
+  -webkit-transition: all 0.5s ease;
+  transition: all 0.5s ease;
+
   ul {
     display: flex;
     align-items: center;
@@ -23,6 +26,8 @@ nav {
         font-weight: 200;
         font-size: 20px;
         font-family: var(--font1);
+        -webkit-transition: color 0.3s ease;
+        transition: color 0.3s ease;
         &:hover {
           color: var(--c5);
         }
@@ -40,6 +45,8 @@ nav {
       text-decoration: none;
       font-family: var(--font2);
       color: var(--c1);
+      -webkit-transition: color 0.3s ease;
+      transition: color 0.3s ease;
     }
   }
 }
@@ -90,6 +97,9 @@ nav {
         top: 30px;
         left: 30px;
 
+        -webkit-transition: opacity 0.3s ease, transform 0.3s ease;
+        transition: opacity 0.3s ease, transform 0.3s ease;
+
         &:checked ~ span {
           opacity: 1;
           transform: rotate(45deg) translate(-2px, -1px);
@@ -117,8 +127,8 @@ nav {
         border-radius: 3px;
         z-index: 1;
         transform-origin: 4px 0px;
-        transition: transform 0.5s cubic-bezier(0.77, 0.2, 0.05, 1),
-          background 0.5s cubic-bezier(0.77, 0.2, 0.05, 1), opacity 0.55s ease;
+        -webkit-transition: transform 0.5s cubic-bezier(0.77, 0.2, 0.05, 1), background 0.5s cubic-bezier(0.77, 0.2, 0.05, 1), opacity 0.55s ease;
+        transition: transform 0.5s cubic-bezier(0.77, 0.2, 0.05, 1), background 0.5s cubic-bezier(0.77, 0.2, 0.05, 1), opacity 0.55s ease;
 
         &:first-child {
           transform-origin: 0% 0%;
@@ -140,7 +150,9 @@ nav {
     height: 100vh;
     background: var(--bg7);
     transform-origin: -10% -10%;
+    -webkit-transform: translate(-100%, 0);
     transform: translate(-100%, 0);
+    -webkit-transition: transform 0.5s cubic-bezier(0.77, 0.2, 0.05, 1);
     transition: transform 0.5s cubic-bezier(0.77, 0.2, 0.05, 1);
     display: flex;
     flex-direction: column;
@@ -159,6 +171,7 @@ nav {
   }
 
   .MenuToggle div input:checked ~ .Menu {
+    -webkit-transform: none;
     transform: none;
   }
 
@@ -189,6 +202,7 @@ nav {
     padding: 12px 56px;
     border-radius: 16px;
     overflow: hidden;
+    -webkit-transition: all 0.48s cubic-bezier(0.23, 1, 0.32, 1);
     transition: all 0.48s cubic-bezier(0.23, 1, 0.32, 1);
     &::after {
       content: "";
@@ -201,16 +215,9 @@ nav {
       z-index: -1;
       transform: scaleX(0);
       transform-origin: left;
+      -webkit-transition: transform 0.48s cubic-bezier(0.23, 1, 0.32, 1);
       transition: transform 0.48s cubic-bezier(0.23, 1, 0.32, 1);
     }
-  }
-
-  .menu .link svg {
-    width: 14px;
-    height: 14px;
-    fill: #000000;
-    transition: all 0.48s cubic-bezier(0.23, 1, 0.32, 1);
-    margin-left: 15px;
   }
 
   .menu .item {
@@ -231,6 +238,7 @@ nav {
     opacity: 0;
     visibility: hidden;
     transform: translateY(-12px);
+    -webkit-transition: all 0.48s cubic-bezier(0.23, 1, 0.32, 1);
     transition: all 0.48s cubic-bezier(0.23, 1, 0.32, 1);
     z-index: 1;
     pointer-events: none;
@@ -254,13 +262,9 @@ nav {
     transform-origin: right;
   }
 
-  .menu .item:active .link svg {
-    fill: #ffffff;
-    transform: rotate(-180deg);
-  }
-
   .submenu .submenu-item {
     width: 100%;
+    -webkit-transition: all 0.48s cubic-bezier(0.23, 1, 0.32, 1);
     transition: all 0.48s cubic-bezier(0.23, 1, 0.32, 1);
   }
 
@@ -270,34 +274,8 @@ nav {
     width: 100%;
     position: relative;
     text-align: center;
+    -webkit-transition: all 0.48s cubic-bezier(0.23, 1, 0.32, 1);
     transition: all 0.48s cubic-bezier(0.23, 1, 0.32, 1);
-  }
-
-  .submenu .submenu-item:last-child .submenu-link {
-    border-bottom: none;
-  }
-
-  .submenu .submenu-link::before {
-    content: "";
-    position: absolute;
-    top: 0;
-    left: 0;
-    transform: scaleX(0);
-    width: 100%;
-    height: 100%;
-    background-color: #72788d;
-    z-index: -1;
-    transform-origin: left;
-    transition: transform 0.48s cubic-bezier(0.23, 1, 0.32, 1);
-  }
-
-  .submenu .submenu-link:hover:before {
-    transform: scaleX(1);
-    transform-origin: right;
-  }
-
-  .submenu .submenu-link:hover {
-    color: #ffffff;
   }
 }
 
@@ -311,6 +289,8 @@ nav {
   .MenuToggle div input {
     width: 30px;
     height: 30px;
+    top: 20px;
+    left: 20px;
   }
   .Menu li a {
     font-size: 20px;
@@ -346,4 +326,3 @@ nav {
     }
   }
 }
-// ================================================================================================
