--- a/sass/_nav.scss
+++ b/sass/_nav.scss
@@ -174,108 +174,52 @@ nav {
     -webkit-transform: none;
     transform: none;
   }
-
-  .menu {
-    font-size: 16px;
-    line-height: 1.6;
-    color: #f9f9f9;
-    width: fit-content;
-    display: flex;
-
-    a {
-      font-family: var(--font1);
-      font-size: inherit;
-      line-height: inherit;
-    }
-  }
-
-  .menu .link {
-    margin-top: -25px;
-    position: relative;
-    display: flex;
-    align-items: center;
-    justify-content: center;
+.link {
+    border: none;
+    background-color: inherit;
+    color: var(--c2);
     font-family: var(--font1);
-    font-size: 22px;
-
-    gap: 12px;
-    padding: 12px 56px;
-    border-radius: 16px;
-    overflow: hidden;
-    -webkit-transition: all 0.48s cubic-bezier(0.23, 1, 0.32, 1);
-    transition: all 0.48s cubic-bezier(0.23, 1, 0.32, 1);
-    &::after {
-      content: "";
-      position: absolute;
-      top: 0;
-      left: 0;
-      width: 100%;
-      height: 100%;
-      background-color: #9ea0aa;
-      z-index: -1;
-      transform: scaleX(0);
-      transform-origin: left;
-      -webkit-transition: transform 0.48s cubic-bezier(0.23, 1, 0.32, 1);
-      transition: transform 0.48s cubic-bezier(0.23, 1, 0.32, 1);
+    font-size: 24px;
+    margin-top: 0;
+    cursor: pointer;
+    &:hover {
+      color: var(--c5);
     }
   }
-
-  .menu .item {
+  .languages-menu {
     position: relative;
   }
-
-  .menu .item .submenu {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
+  .submenu {
     position: absolute;
-    top: 100%;
-    border-radius: 0 0 16px 16px;
-    left: 0;
-    width: 100%;
-    overflow: hidden;
-    border: 1px solid #cccccc;
-    opacity: 0;
-    visibility: hidden;
-    transform: translateY(-12px);
-    -webkit-transition: all 0.48s cubic-bezier(0.23, 1, 0.32, 1);
-    transition: all 0.48s cubic-bezier(0.23, 1, 0.32, 1);
-    z-index: 1;
-    pointer-events: none;
-    list-style: none;
+    border: 1px solid white;
+    background-color: var(--bg7);
+    padding: 10px;
+    border-radius: 10px;
+    top: 50%;
+    left: 50%;
+    transform: translateY(-50%) translateX(-50%);
+    box-shadow: rgba(0, 0, 0, 0.09) 0px 2px 1px, rgba(0, 0, 0, 0.09) 0px 4px 2px,
+      rgba(0, 0, 0, 0.09) 0px 8px 4px, rgba(0, 0, 0, 0.09) 0px 16px 8px,
+      rgba(0, 0, 0, 0.09) 0px 32px 16px;
   }
 
-  .menu .item:focus-within .submenu {
-    opacity: 1;
-    visibility: visible;
-    transform: translateY(0);
-    pointer-events: auto;
+  .submenu-item {
+    padding: 12px 0;
   }
 
-  .menu .item:active .link {
-    color: #ffffff;
-    border-radius: 16px 16px 0 0;
-  }
-
-  .menu .item:active .link::after {
-    transform: scaleX(1);
-    transform-origin: right;
-  }
-
-  .submenu .submenu-item {
-    width: 100%;
-    -webkit-transition: all 0.48s cubic-bezier(0.23, 1, 0.32, 1);
-    transition: all 0.48s cubic-bezier(0.23, 1, 0.32, 1);
-  }
-
-  .submenu .submenu-link {
+  .submenu-link {
     display: block;
-    padding: 12px 24px;
+    padding: 20px 90px;
     width: 100%;
     position: relative;
     text-align: center;
-    -webkit-transition: all 0.48s cubic-bezier(0.23, 1, 0.32, 1);
-    transition: all 0.48s cubic-bezier(0.23, 1, 0.32, 1);
+  }
+  .close_btn {
+    background-color: inherit;
+    border: none;
+    font-size: 40px;
+    color: black;
+    cursor: pointer;
   }
 }
 
